--- a/app/build.gradle
+++ b/app/build.gradle
@@ -47,4 +47,9 @@ dependencies {
     implementation "android.arch.persistence.room:runtime:1.1.0"
     annotationProcessor "android.arch.persistence.room:compiler:1.1.0"
     implementation "com.google.code.gson:gson:2.8.0"
+    // Room components
+    implementation "androidx.room:room-runtime:2.2.0-beta01"
+    annotationProcessor "androidx.room:room-compiler:2.2.0-beta01"
+    androidTestImplementation "androidx.room:room-testing:2.2.0-beta01"
+    kapt "android.arch.persistence.room:compiler:1.0.0"
 }
