--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -19,7 +19,7 @@
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
         </activity>
-        <activity android:name=".DetailItemActivity"></activity>
+        <activity android:name=".DetailMovieActivity"></activity>
     </application>
     <uses-permission
         android:name="android.permission.INTERNET"
