--- a/app/build.gradle
+++ b/app/build.gradle
@@ -46,10 +46,10 @@ dependencies {
     kapt 'com.github.bumptech.glide:compiler:4.10.0'
     implementation 'android.arch.persistence.room:runtime:1.1.1'
     annotationProcessor 'android.arch.persistence.room:compiler:1.1.1'
-    kapt 'com.google.code.gson:gson:2.8.5'
+    implementation 'com.google.code.gson:gson:2.8.5'
     // Room components
-    kapt  'androidx.room:room-runtime:2.2.0-rc01'
-    kapt  'androidx.room:room-compiler:2.2.0-rc01'
+    implementation 'androidx.room:room-runtime:2.2.0-rc01'
+    annotationProcessor 'androidx.room:room-compiler:2.2.0-rc01'
     androidTestImplementation 'androidx.room:room-testing:2.2.0-rc01'
     kapt 'android.arch.persistence.room:compiler:1.1.1'
 }
