--- a/app/build.gradle
+++ b/app/build.gradle
@@ -52,4 +52,6 @@ dependencies {
     annotationProcessor 'androidx.room:room-compiler:2.2.0-rc01'
     androidTestImplementation 'androidx.room:room-testing:2.2.0-rc01'
     kapt 'android.arch.persistence.room:compiler:1.1.1'
+    // Snack Bar
+    implementation 'com.android.support:design:29.1.0'
 }
